internal/render/testdata/radarr/k8s/play/radarr/base/service.yaml
# Generated by deploybot. Do not edit.
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: radarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 7878
