internal/render/testdata/radarr/k8s/play/radarr/base/statefulset.yaml
# Generated by deploybot. Do not edit.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: deploybot
        app.kubernetes.io/name: radarr
    spec:
      containers:
        - name: radarr
          image: docker.io/linuxserver/radarr:5.26.2.10099-ls276
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7878
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
